<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context="it.jaschke.alexandria.fragments.AddBook">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:gravity="center_horizontal|top"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/eancontainer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/add_input_margin"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/ean"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/input_hint"
                android:inputType="number"
                android:maxLength="@integer/ean_size"
                android:maxLines="1"
                android:minEms="@integer/ean_width"
                android:paddingEnd="@dimen/medium_padding"
                android:paddingRight="@dimen/medium_padding"
                android:saveEnabled="true" />

            <Button
                android:id="@+id/scan_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/scan_button" />

        </LinearLayout>

        <!-- No Conenction or server down -->
        <TextView
            android:id="@+id/empty_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/add_emptyview_margin"
            android:layout_marginEnd="@dimen/add_emptyview_margin"
            android:layout_marginStart="@dimen/add_emptyview_margin"
            android:gravity="center"
            android:textColor="@color/red"
            android:textSize="@dimen/medium_fontsize"
            android:visibility="gone" />


        <include
            android:id="@+id/scan_bookdetails"
            layout="@layout/book_full_details"
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_marginTop="@dimen/add_bookDetails_margin_vertical"
            android:layout_marginLeft="@dimen/add_bookDetails_margin_horizontal"
            android:layout_marginStart="@dimen/add_bookDetails_margin_horizontal"
            android:layout_marginRight="@dimen/add_bookDetails_margin_horizontal"
            android:layout_marginEnd="@dimen/add_bookDetails_margin_horizontal"
            android:layout_weight="1"
            android:visibility="invisible"></include>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="@dimen/add_buttons_height"
            android:orientation="horizontal">

            <Button
                android:id="@+id/delete_button"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:background="@drawable/touch_selector"
                android:drawableLeft="@drawable/ic_action_discard"
                android:drawableStart="@drawable/ic_action_discard"
                android:text="@string/cancel_button"
                android:visibility="invisible" />

            <Button
                android:id="@+id/save_button"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:layout_gravity="bottom"
                android:layout_weight="1"
                android:background="@drawable/touch_selector"
                android:drawableLeft="@drawable/ic_action_accept"
                android:drawableStart="@drawable/ic_action_accept"
                android:text="@string/ok_button"
                android:visibility="invisible" />
        </LinearLayout>
    </LinearLayout>
</FrameLayout>
